--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Listo</title>
+	<title>Listo!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/base/reset.css">
 	<link rel="stylesheet" href="styles/base/fonts.css">
@@ -45,11 +45,11 @@
 
 	<!-- FORM -->
 	<section id ='newTaskForm'>
-		<h3 class='todo-form-title'>New To Do </h3>
+		<h3 class='todo-form-title'>Whatcha doing? </h3>
 		<div class='form-input-container'>
 			<img id = 'cancel' src= './img/icons/cross.png' alt='close form icon'>
-			<input id='newItemInput' class ='todo-title-input form-input' type='text' placeholder='To-Do Title'>
-			<button id='saveNewItem' class='complete-todo-buitton'> Add To Do </button>
+			<input id='newItemInput' class ='todo-title-input form-input' type='text' placeholder='Task at hand'>
+			<button id='saveNewItem' class='complete-todo-button'> It Shall Be Done!</button>
 		</div>
 	</section>
 
